Fixing Apply now butting on tablet devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,11 +38,19 @@ nav > img {
     margin: 0 60px;
 }
 
-nav > div {
+nav div {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-self: flex-end;
     margin-right: 15px;
+}
+
+nav section {
+    display: flex;
+    flex-wrap: wrap;
+    align-self: flex-end;
+    height: 60px;
+    justify-content: flex-end;
 }
 
 nav button {
@@ -334,4 +342,6 @@ footer i {
     transform: scale(1.5);
 }
 /*------------------//END OF FOOTER//------------------*/
-@media only screen and (max-width: 600px)
+@media only screen and (max-width: 886px) {
+
+}
